Fixed #100