@@ -2,22 +2,23 @@ package net.xolt.freecam.config;
 
 import net.minecraft.block.*;
 
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 public class CollisionWhitelist {
 
-    private static final Collection<Class<? extends Block>> transparentWhitelist = List.of(
+    private static final Collection<Class<? extends Block>> transparentWhitelist = Collections.unmodifiableList(Arrays.asList(
             AbstractGlassBlock.class,
             PaneBlock.class,
             BarrierBlock.class
-    );
+    ));
 
-    private static final Collection<Class<? extends Block>> openableWhitelist = List.of(
+    private static final Collection<Class<? extends Block>> openableWhitelist = Collections.unmodifiableList(Arrays.asList(
             FenceGateBlock.class,
             DoorBlock.class,
             TrapdoorBlock.class
-    );
+    ));
 
     public static boolean isTransparent(Block block) {
         return isMatch(block, transparentWhitelist);
